@@ -1,0 +1,22 @@
+use strict;
+use warnings;
+use Test::More 0.98;
+use lib '../blib/', '../blib/lib', '../lib';
+use Fl;
+my $slide1 = new_ok
+    'Fl::Slider' => [20, 40, 300, 100, 'Hello, World!'],
+    'slider w/ label';
+my $slide2 = new_ok
+    'Fl::Slider' => [20, 40, 300, 100],
+    'slider w/o label';
+#
+isa_ok $slide1, 'Fl::Valuator';
+#
+can_ok $slide1, $_ for qw[bounds scrollvalue slider slider_size];
+#
+Fl::delete_widget($slide2);
+is $slide2, undef, '$slide2 is now undef';
+undef $slide1;
+is $slide1, undef, '$slide1 is now undef';
+#
+done_testing;
