@@ -2,6 +2,9 @@ Revision history for Perl extension Fl
 
 {{$NEXT}}
 
+    - New widgets:
+        - Fl::Slider - Contains a sliding knob inside a box
+
 0.99.9 2016-05-19T01:11:29Z
 
     - Fix index count when there are optional arguments in generated code
